# LLM_Cost_Investigator

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  replay_tests.py
data/replay/: context_bloat.json  model_misroute.json  model_routing_thin.json  retry_loop.json  retry_loop_thin.json  token_context_thin.json
data/reports/incidents/: context_bloat_incident.json  context_bloat_incident.md  model_misroute_incident.json  model_misroute_incident.md  retry_loop_incident.json  retry_loop_incident.md
docs/plans/: base_plan.md  detector_router_plan.md  implementation_plan.md  investigation_replay_ui_plan.md  repo_structure_plan.md  testing_demo_plan.md
llm_cost_investigator/: __init__.py  agents.py  aggregator.py  cli.py  detector.py  fallback.py  llm_client.py  reporter.py  router.py  schemas.py  simulate_telemetry.py  telemetry_store.py
plans/: base_plan.md  implementation_plan.md  testing_demo_plan.md
reports/: context_bloat_incident.json  context_bloat_incident.md  context_bloat_report.json  live_token_context_tool_use.txt  model_misroute_incident.json  model_misroute_incident.md  model_misroute_report.json  retry_loop_incident.json  retry_loop_incident.md  retry_loop_report.json
scripts/: dev_replay.sh  export_replay_catalog.py
scripts/live/: run_model_isolation_test.py  run_model_routing_tool_use_live.py  run_token_context_tool_use_live.py  run_tool_use_live.py
tests/: test_replay.py
web/api/: __init__.py  app.py
web/api/models/: replay.py
web/frontend/: index.html  package-lock.json  package.json
web/frontend/src/: App.tsx  (+1 more)
(+22 files in other folders)
