[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-cost-investigator"
version = "0.1.0"
description = "Agentic LLM cost anomaly investigator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8,<3.0",
]

[tool.setuptools]
packages = ["llm_cost_investigator"]
