[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-cost-investigator"
version = "0.1.0"
description = "Agentic LLM cost anomaly investigator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0,<2.0",
    "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
llm-cost-investigator = "llm_cost_investigator.cli:main"

[tool.setuptools]
packages = ["llm_cost_investigator"]
